# soc-triage-ai

./: .env.example  .gitignore  LICENSE  README.md  app.py  dataset.py  docker-compose.yml  evaluation.py  main.py  ml_experiments.py  model_card.md  mood_analyzer.py  pyproject.toml  requirements.txt  triage.py
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  Makefile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py
apps/api/src/soc_api/: config.py  db.py  deps.py  main.py  security.py
apps/api/src/soc_api/cli/: seed_admin.py
apps/api/src/soc_api/models/: orm.py
apps/api/src/soc_api/routers/: alerts.py  cases.py  corpus.py  eval.py  health.py  retrieval.py  triage.py
apps/api/src/soc_api/services/: alert_service.py  bootstrap.py  case_service.py  engine_loader.py  triage_service.py
apps/api/tests/: conftest.py  test_auth.py  test_security.py
apps/dev-console/: app.py  pyproject.toml
apps/web/: .env.local.example  .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/scripts/: gen-types.mjs
apps/web/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/app/cases/[id]/: error.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/src/app/eval/: page.tsx
apps/web/src/app/submit/: SubmitForm.tsx  page.tsx
apps/web/src/components/: EvidenceList.tsx  MetricCard.tsx  MitreChip.tsx  ObservablesPanel.tsx  SeverityBadge.tsx  SourcePill.tsx  UncertaintyBadge.tsx
apps/web/src/lib/: api.ts
data/threat_intel/: insider_threat.md  log_analysis_linux.md  mitre_execution_persistence.md  mitre_initial_access.md  phishing_indicators.md  ransomware_indicators.md
docs/superpowers/: v2-cutover-checklist.md
docs/superpowers/plans/: 2026-04-27-mvp-productization.md  2026-04-28-v2-platform.md
docs/superpowers/specs/: 2026-04-27-mvp-productization-design.md
docs/superpowers/task-briefs/: 2026-04-29-phase-2-overrides.md
rag/: __init__.py  corpus.py  retriever.py
services/triage-worker/: pyproject.toml
services/triage-worker/triage_engine/: case_package.py  evaluation.py  extractors.py  triage.py
services/triage-worker/triage_engine/data/threat_intel/: cve_critical_2023_2024.md  log_analysis_windows.md  mitre_credential_access_lateral.md  network_anomalies.md  phishing_indicators.md  triage_severity_framework.md
services/triage-worker/triage_engine/rag/: __init__.py  retriever.py
tests/: harness_results.json  test_case_package.py  test_evaluation.py  test_extractors.py  test_harness.py
tests/harness/: harness_results.json  test_harness.py
tests/unit/: test_case_package.py  test_evaluation.py  test_extractors.py
~/.claude-mem/: settings.json
