[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soc-dev-console"
version = "0.2.0"
description = "Internal Streamlit dev console for SOC Triage AI. Imports the v1 triage_engine directly for fast local debugging."
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "triage-engine",
]

[tool.hatch.build.targets.wheel]
packages = []
bypass-selection = true
