[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triage-engine"
version = "0.2.0"
description = "RAG-grounded LLM triage engine for SOC alerts. v1 engine vendored as a library, consumed by the v2 worker."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "sentence-transformers>=2.7.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["triage_engine"]

[tool.hatch.build.targets.wheel.force-include]
"triage_engine/data" = "triage_engine/data"
